# worship_ppt

./: .env  .gitignore  .pre-commit-config.yaml  .style.yapf  2021_2_7_Bible.pptx  2021_2_7_Large.pptx  Dockerfile  Makefile  README.md  bible.json  bible.py  bible2pptx.py  bible2pptx_emergency.py  bible_1_web2txt.py  bible_2_txt2json.py  bible_3_json2pptx.py  bible_info.csv  bible_new.json  bible_ppt_prep.txt  common.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  intro_vid_web.py  requirements.txt  setup.cfg  worship_ppt.py
.github/workflows/: main.yml
client/: .gitignore  Dockerfile  next.config.js  package-lock.json
client/components/: hymn.tsx  hymn_form.tsx  jubo_form.tsx  ppt_form.tsx  song.tsx
client/components/layout/: footer.tsx  header.tsx  menu.tsx
client/pages/: 404.tsx  _document.tsx  index.tsx
client/services/: bible.ts  index.ts  jubo.ts  ppt.ts  song.ts  types.ts
client/services/api/: api.ts
worship/: BUILD.bazel  Dockerfile  app.py  bible.py  common.py  hymn.py  jubo.py  ppt.py  requirements.txt  sermon.py
worship/data/: 6-26-22.docx  bible_info.csv  hymn.pptx
worship/templates/: index.html
worship/tests/: test_app.py
worship_ppt/: 2021_2_7_Bible.pptx  2021_2_7_Large.pptx  app.py  bible.py  bible2pptx_web.py  common.py  hymn.py  hymn2pptx.py  intro_vid_web.py  jubo.py  jubo2pptx.py  ppt.py  sermon.py  template.pptx  test.py
worship_ppt/data/: hymn.json
worship_ppt/static/: index.js
worship_ppt/templates/: index.html
worship_ppt/tests/: test_app.py
